--- a/src/prefpane/InsomniaT/English.lproj/InsomniaTPref.xib
+++ b/src/prefpane/InsomniaT/English.lproj/InsomniaTPref.xib
@@ -200,16 +200,16 @@
 								<int key="NSPeriodicInterval">25</int>
 							</object>
 						</object>
-						<object class="NSLevelIndicator" id="46417102">
+						<object class="NSLevelIndicator" id="1058623924">
 							<reference key="NSNextResponder" ref="1037298196"/>
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{20, 398}, {84, 18}}</string>
 							<reference key="NSSuperview" ref="1037298196"/>
 							<bool key="NSEnabled">YES</bool>
-							<object class="NSLevelIndicatorCell" key="NSCell" id="503349398">
+							<object class="NSLevelIndicatorCell" key="NSCell" id="673909798">
 								<int key="NSCellFlags">130560</int>
 								<int key="NSCellFlags2">0</int>
-								<reference key="NSControlView" ref="46417102"/>
+								<reference key="NSControlView" ref="1058623924"/>
 								<double key="NSMaxValue">1</double>
 								<int key="NSIndicatorStyle">2</int>
 							</object>
@@ -225,6 +225,9 @@
 			<object class="NSCustomObject" id="289190352">
 				<string key="NSClassName">InsomniaTStatus</string>
 			</object>
+			<object class="NSCustomObject" id="447313822">
+				<string key="NSClassName">InsomniaTPrefController</string>
+			</object>
 		</object>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
 			<object class="NSMutableArray" key="connectionRecords">
@@ -236,6 +239,62 @@
 						<reference key="destination" ref="660800786"/>
 					</object>
 					<int key="connectionID">26</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">startStopButton</string>
+						<reference key="source" ref="447313822"/>
+						<reference key="destination" ref="249111731"/>
+					</object>
+					<int key="connectionID">153</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">startStopButtonBlurb</string>
+						<reference key="source" ref="447313822"/>
+						<reference key="destination" ref="34194654"/>
+					</object>
+					<int key="connectionID">154</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">statusLevel</string>
+						<reference key="source" ref="447313822"/>
+						<reference key="destination" ref="1058623924"/>
+					</object>
+					<int key="connectionID">155</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">statusLevelBlurb</string>
+						<reference key="source" ref="447313822"/>
+						<reference key="destination" ref="301579186"/>
+					</object>
+					<int key="connectionID">156</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">statusLevelText</string>
+						<reference key="source" ref="447313822"/>
+						<reference key="destination" ref="1063163045"/>
+					</object>
+					<int key="connectionID">157</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">startStop:</string>
+						<reference key="source" ref="447313822"/>
+						<reference key="destination" ref="249111731"/>
+					</object>
+					<int key="connectionID">158</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">initialFirstResponder</string>
+						<reference key="source" ref="660800786"/>
+						<reference key="destination" ref="249111731"/>
+					</object>
+					<int key="connectionID">159</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -280,7 +339,7 @@
 							<reference ref="858385015"/>
 							<reference ref="848159353"/>
 							<reference ref="34194654"/>
-							<reference ref="46417102"/>
+							<reference ref="1058623924"/>
 						</object>
 						<reference key="parent" ref="660800786"/>
 					</object>
@@ -381,17 +440,22 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">150</int>
-						<reference key="object" ref="46417102"/>
+						<reference key="object" ref="1058623924"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="503349398"/>
+							<reference ref="673909798"/>
 						</object>
 						<reference key="parent" ref="1037298196"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">151</int>
-						<reference key="object" ref="503349398"/>
-						<reference key="parent" ref="46417102"/>
+						<reference key="object" ref="673909798"/>
+						<reference key="parent" ref="1058623924"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">152</int>
+						<reference key="object" ref="447313822"/>
+						<reference key="parent" ref="0"/>
 					</object>
 				</object>
 			</object>
@@ -420,6 +484,7 @@
 					<string>146.IBPluginDependency</string>
 					<string>150.IBPluginDependency</string>
 					<string>151.IBPluginDependency</string>
+					<string>152.IBPluginDependency</string>
 					<string>6.IBPluginDependency</string>
 					<string>6.ImportedFromIB2</string>
 				</object>
@@ -432,6 +497,7 @@
 					<integer value="1"/>
 					<integer value="1"/>
 					<string>{224.664, 10}</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -466,7 +532,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">151</int>
+			<int key="maxID">159</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -477,6 +543,37 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBUserSource</string>
 						<string key="minorKey"/>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">InsomniaTPrefController</string>
+					<string key="superclassName">NSObject</string>
+					<object class="NSMutableDictionary" key="actions">
+						<string key="NS.key.0">startStop:</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="NSMutableDictionary" key="outlets">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>startStopButton</string>
+							<string>startStopButtonBlurb</string>
+							<string>statusLevel</string>
+							<string>statusLevelBlurb</string>
+							<string>statusLevelText</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>NSButton</string>
+							<string>NSTextField</string>
+							<string>NSLevelIndicator</string>
+							<string>NSTextField</string>
+							<string>NSTextField</string>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">InsomniaTPrefController.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
